# beans

./: .gitignore  ABSTRACT.md  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DIRECTION.md  Dockerfile  README.md  dev-container.sh  entrypoint.sh
.agents/roles/: architect.md
.claude/agents/: architect.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  task.md
.github/workflows/: ci.yml
backlog/: 001-completed-model-foundation.md  002-dropped-fqn-overload-collision-fix.md  003-inherited-member-resolution.md  004-type-substitution-cross-file.md  005-overload-resolution-3-phase.md  006-sam-detection.md  007-lub-computation.md  008-exhaustiveness-checking.md  009-synthetic-member-generation.md  010-wildcard-import-ambiguity.md  011-access-control-enforcement.md  012-jmod-bytecode-reader.md  013-module-registry-jpms.md  014-graph-serialization-warm-restart.md  015-diagnostic-rule-trait.md  016-java-parser-emit-node-payloads.md  017-java-parser-typeref-from-tree-sitter.md  018-java-parser-bounds-throws-varargs-permits.md  019-java-parser-records-enum-constants.md  020-java-parser-annotations-and-constants.md  021-kotlin-parser-skeleton.md  022-scala-parser-skeleton.md  023-groovy-parser-skeleton.md  024-clojure-parser-skeleton.md  025-move-lsp-shaped-completion-out-of-core.md  026-reorganize-beans-core-into-jvm-and-languages.md  027-dynamic-link-tiered-subscriptions.md  028-fqn-and-name-ergonomics-pass.md  029-jvm-enrichments-per-variant-split.md  030-java-parser-correctness-pass.md  031-emit-package-nodes-from-java-walker.md  032-decide-whether-payload-view-surfaces-enumconstant.md  033-cfg-gate-import-in-beans-lsp.md  034-jvm-payload-completion-adapter.md  035-snapshot-fast-restart-strategy.md  036-multi-release-jar-overlay.md  036-sidecar-v1-gradle-import.md  037-class-container-layer.md  037-fqn-interning.md  038-jdk-locator.md  (+1 more)
beans/: Cargo.toml
beans-core/: Cargo.toml
beans-core/src/: annotation.rs  beans.rs  completion.rs  diagnostics.rs  fix.rs  integration.rs  interner.rs  language.rs  lib.rs  location.rs  modifier.rs  multi_query.rs  payload.rs  query.rs  registries.rs  registry.rs  relation.rs  resolve.rs  signature.rs  symbol.rs  symbol_id.rs  symbol_kind.rs  symbol_table.rs  type_ref.rs
beans-core/src/graph/: arena.rs  behavior.rs  cache_state.rs  dynamic_link.rs  mod.rs  registry.rs  tests.rs
beans-core/src/jvm/: annotation.rs  constant.rs  container.rs  fqn.rs  keys.rs  mod.rs  payload.rs  record.rs  registries.rs  signature.rs  symbol.rs  symbol_kind.rs
beans-core/src/languages/: mod.rs
beans-core/src/languages/clojure/: mod.rs
beans-core/src/languages/groovy/: mod.rs
beans-core/src/languages/java/: diagnostics.rs  keys.rs  mod.rs  parser.rs  payload.rs  registries.rs  resolve.rs  syntax.rs  types.rs
beans-core/src/languages/kotlin/: kind.rs
beans-core/src/languages/scala/: kind.rs
beans-core/src/primitives/: location.rs  mod.rs
beans-core/src/registry/: mod.rs  query.rs  tests.rs
beans-core/tests/: lifecycle.rs  registries.rs
beans-lang-java/: Cargo.toml
beans-lang-java-test/: Cargo.toml
beans-lang-java-test/tests/: fixes.rs  spec.rs
beans-lang-java-test/tests/spec/: jls04_types.rs  jls06_names.rs  jls07_packages.rs  jls08_classes.rs  jls09_interfaces.rs  jls10_arrays.rs  jls14_statements.rs  jls15_expressions.rs
beans-lang-java/src/: diagnostics.rs  fixes.rs  java_language.rs  keys.rs  lib.rs  parser.rs  payload.rs  registries.rs  resolve.rs  source.rs  syntax.rs  types.rs
beans-lang-java/tests/: integration.rs
beans-lang-jvm/: Cargo.toml
beans-lang-jvm/src/: completion.rs  constant.rs  fqn.rs  keys.rs  lib.rs  payload.rs  record.rs  registries.rs  type_ref.rs
beans-lang-jvm/src/model/: annotation.rs  mod.rs  payload.rs  symbol_kind.rs
beans-lsp/: Cargo.toml
beans-lsp/src/: actor.rs  backend.rs  completion.rs  hover.rs  main.rs  resolve.rs  workspace.rs
beans-sidecar/: build.gradle.kts  settings.gradle.kts
beans-spec-tests/: Cargo.toml
beans-spec-tests/src/: lib.rs
beans-spec-tests/tests/: interop.rs  java.rs  prelude.rs
beans-spec-tests/tests/interop/kotlin_java/: nullability_at_java_use_site.rs
beans-spec-tests/tests/java/: fixes.rs  jls07_packages.rs  jls15_expressions.rs
beans-spec-tests/tests/support/: prelude.rs
beans-test-harness/: Cargo.toml
beans-test-harness/src/: fixture.rs  lib.rs  markers.rs
beans-test-harness/tests/: spec.rs
beans-test-java/: Cargo.toml
beans-test-java/src/: lib.rs
beans-test-java/tests/: fixes.rs  prelude.rs  spec.rs
beans-test-java/tests/spec/: jls04_types.rs  jls06_names.rs  jls07_packages.rs  jls08_classes.rs  jls09_interfaces.rs  jls10_arrays.rs  jls14_statements.rs  jls15_expressions.rs
beans-test-jdks/: Cargo.toml
beans-test-jdks/src/: lib.rs
beans-toolchains/: Cargo.toml
beans-toolchains/examples/: list.rs  pick.rs
beans-toolchains/src/: candidate.rs  lib.rs  probe.rs  select.rs  suppliers.rs
beans-toolchains/tests/: detect.rs
beans-vscode/: esbuild.js  package-lock.json  package.json
beans-vscode/src/: extension.ts
beans/examples/: index_workspace.rs
beans/src/: lib.rs  payload.rs  registries.rs  view.rs  workspace.rs
beans/src/languages/clojure/: kind.rs
beans/src/languages/kotlin/: mod.rs
beans/src/languages/scala/: mod.rs
beans/tests/: facade.rs  lifecycle.rs  registries.rs
crates/core/: Cargo.toml
crates/engine/: Cargo.toml
crates/lang-java/: Cargo.toml
crates/lang-java/examples/: dump.rs
crates/lang-java/src/: diagnostics.rs  lib.rs  model.rs  parser.rs  projection.rs  resolution.rs
crates/lang-java/tests/: navigation.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: main.rs  translation.rs
crates/platform-jvm/: Cargo.toml
crates/spec-tests/: Cargo.toml
crates/storage/: Cargo.toml
crates/test-support/: Cargo.toml
docs/: ARCHITECTURE.md  FIXTURE.md  MODEL_EVOLUTION.md  SEMANTIC_GRAPH.md
docs/adr/: 0001-cohesive-not-extensible.md  0002-library-first.md  0003-spec-drives-implementation.md  README.md  (+31 more)
scripts/: dev-vscode.sh  download-specs.sh
(+126 files in other folders)
