[workspace]
resolver = "3"
members = [
    "beans-core",
    "beans-lang-jvm",
    "beans-lang-java",
    "beans-toolchains",
    "beans",
    "beans-lsp",
    "beans-test-harness",
    "beans-test-jdks",
    "beans-spec-tests",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Bálint Hegyi <balint@blnt.dev>"]
