[workspace]
resolver = "3"
members = ["crates/core", "crates/engine", "crates/lang-java", "crates/lsp", "crates/platform-jvm", "crates/spec-tests", "crates/test-support", "tools/java-inspect"]

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Bálint Hegyi <me@blnt.dev>"]
license = "Apache-2.0"

[workspace.dependencies]
lsp-server = "0.8"
lsp-types = "0.97"
serde_json = "1"
tree-sitter = "0.25"
tree-sitter-java = "0.23"
