[package]
name = "beans-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

# The symbolic engine: graph arena, registry primitive, query types,
# source primitives, and neutral analysis values (Diagnostic, Fix). No
# language or JVM knowledge — those live in beans-lang-jvm and the
# beans-lang-<language> vertical crates, composed by the `beans` facade.

[dependencies]
