[package]
name = "beans-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "beans-lsp"
path = "src/main.rs"

[dependencies]
beans = { path = "../beans", default-features = false, features = ["java"] }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
# Per ADR-0005: parallelism at the file-batch boundary. Workspace
# parsing is the parallel phase; integration into the graph is serial.
rayon = "1.10"
