[package]
name = "beans-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "beans-lsp"
path = "src/main.rs"

[dependencies]
beans = { path = "../beans" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Workspace scanning and the rayon parse fanout (ADR-0005) moved into
# the `beans` facade; the LSP no longer owns indexing mechanics.
