[package]
name = "beans-spec-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true

# Facade-level spec and interop behavior tests (ADR-0032). Depends on the
# composed `beans` facade and the fixture harness — never on `beans-lsp`.
# The facade composes every language vertical unconditionally (ADR-0033),
# so there are no language features to enable here.
[dev-dependencies]
beans = { path = "../beans" }
beans-test-harness = { path = "../beans-test-harness" }
