[package]
name = "beans-toolchains"
version.workspace = true
edition.workspace = true
authors.workspace = true

# Dependency-free by design: filesystem scans, a key=value parse, and a
# bounded exec fallback. Consumers (the jmod reader's JDK lookup, the
# tooling sidecar launcher) depend on this crate; it depends on nothing
# in the workspace.
[dependencies]
