[package]
name = "beans"
version.workspace = true
edition.workspace = true
authors.workspace = true

# The facade composes the engine, the shared JVM model, and the language
# verticals. Languages are Cargo features here — the union payload and
# the composed registries bag gate their per-language arms on the same
# flags. A bytecode-only consumer disables default features.
[features]
default = ["java", "kotlin", "scala", "groovy", "clojure"]
# The workspace scan + parallel parse (ADR-0005) live behind the Java
# arm today, so walkdir/rayon are pulled in by the language feature that
# uses them; a bytecode-only build (no default features) skips both.
java = ["dep:beans-lang-java", "dep:rayon", "dep:walkdir"]
kotlin = []
scala = []
groovy = []
clojure = []

[dependencies]
beans-core = { path = "../beans-core" }
beans-lang-jvm = { path = "../beans-lang-jvm" }
beans-lang-java = { path = "../beans-lang-java", optional = true }
# Per ADR-0005: parallelism at the file-batch parse boundary. Scanning
# uses walkdir; the parse phase fans out across rayon, integration is
# serial. Both are only reachable through the Java indexing path.
rayon = { version = "1.10", optional = true }
walkdir = { version = "2", optional = true }

[dev-dependencies]
# examples/index_workspace.rs reads a sidecar WorkspaceModel JSON.
serde_json = "1"
