[package]
name = "beans"
version.workspace = true
edition.workspace = true
authors.workspace = true

# The facade composes the engine, the shared JVM model, and every
# language vertical unconditionally — there are no language Cargo
# features (ADR-0033). Runtime per-extension dispatch decides what to do
# with a file. A consumer that wants a narrower build depends on the
# lower-level crates (`beans-core`, `beans-lang-jvm`, `beans-lang-*`)
# directly rather than partially compiling this facade.

[dependencies]
beans-core = { path = "../beans-core" }
beans-lang-jvm = { path = "../beans-lang-jvm" }
beans-lang-java = { path = "../beans-lang-java" }
# Per ADR-0005: parallelism at the file-batch parse boundary. Scanning
# uses walkdir; the parse phase fans out across rayon, integration is
# serial.
rayon = "1.10"
walkdir = "2"

[dev-dependencies]
# examples/index_workspace.rs reads a sidecar WorkspaceModel JSON.
serde_json = "1"
