[package]
name = "lang-java"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "beans_lang_java"

[dependencies]
core = { path = "../core" }
platform-jvm = { path = "../platform-jvm" }
tree-sitter = { workspace = true }
tree-sitter-java = { workspace = true }
