[package]
name = "lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "beans-lsp"
path = "src/main.rs"

[dependencies]
core = { path = "../core" }
engine = { path = "../engine" }
lang-java = { path = "../lang-java" }
storage = { path = "../storage" }
lsp-server.workspace = true
lsp-types.workspace = true
serde_json.workspace = true
