[package]
name = "lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "beans-lsp"
path = "src/main.rs"

[dependencies]
core = { path = "../core" }
engine = { path = "../engine" }
platform-jvm = { path = "../platform-jvm" }
lsp-server.workspace = true
lsp-types.workspace = true
serde_json.workspace = true
